# optclang

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  optclang_cli.py  optclang_dropin.py  pyproject.toml  setup.sh
docs/: dropin-replacement-guide.md  incremental-config-guide.md
examples/: advanced_config.yaml  basic_config.yaml  incremental_config.yaml  o0_basic.yaml  o3_custom.yaml  sample.cpp  size_opt_config.yaml
src/optclang/: __init__.py  compiler.py  config_parser.py  dropin.py  llvm_tools.py  main.py
